Set alignment on form and fix event handler on exit button

--- a/src/style.css
+++ b/src/style.css
@@ -218,34 +218,62 @@ body > header span {
 }
 
 .add-item-container form {
-  /* display: flex;
-  flex-flow: column wrap;
-  gap: 20px; */
   border: none;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  grid-auto-columns: minmax(0, 1fr);
+  grid-auto-flow: column;
+  align-items: center;
 }
 
 .add-item-container legend {
+  width: max-content;
+  grid-area: 1 / 1 / span 1 / span 2;
   font-weight: bold;
+  justify-self: center;
 }
 
 .add-item-container img {
+  grid-area: 1 / 3;
+  justify-self: end;
   filter: invert(80%);
   float: right;
   width: 30px;
   height: 30px;
 }
 
+.add-item-container label {
+  grid-column-start: 1;
+  justify-self: end;
+}
+
+.add-item-container input {
+  grid-column-start: 2;
+  grid-column-end: span 2;
+}
+
+form :nth-child(8) {
+  grid-column-start: 2;
+  grid-column-end: span 1;
+}
+
+.add-item-container textarea {
+  grid-column-start: 2;
+  grid-column-end: span 2;
+}
+
+.add-item-container select {
+  grid-column-start: 2;
+  grid-column-end: span 1;
+}
+
+.add-item-container button {
+  grid-column-start: 3;
+  grid-row-start: 7;
+}
+
 .add-item-container img:hover {
   cursor: pointer;
-} 
-
-
-.add-item-container form div {
-  display: flex;
-  flex-flow: row wrap;
-  gap: 10px;
 }
 
 .todo-item-container {
